src/stylesheets/about.css
@import url(../stylesheets/style.css);

.about-body {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: var(--navbar-height) 0 0 0;
    margin-bottom: 4vh;
}

.about-text {
    width: 80vw;
    max-width: 100rem;
}

.about-mobile-main-heading {
    margin-top: clamp(1vh, 4vh, 4vw);
    text-align: left;
    margin-bottom: 4vh;
}

.about-link {
    color: #222222;
    font-weight: bold;
}

.social-media-icons-body {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    margin: clamp(1rem, 8vw, 6.4vh);
    margin-bottom: 0;
}

.social-media-icons {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    margin: clamp(1rem, 8vw, 6.4vh);
    margin-top: 1vh;
}

.social-media-row-1 {
    display: flex;
    width: 55%;
    justify-content: center;
}

.social-media-row-2 {
    display: flex;
    width: 55%;
    justify-content: center;
}

.social-media-icon {
    width: clamp(1rem, 8vw, 6.4vh);
    height: clamp(1rem, 8vw, 6.4vh);
    flex-grow: 0;
    flex-shrink: 0;
    margin: clamp(0.2rem, 1.6vw, 6.4vh);
}

.social-media-icon:hover {
    transform-origin: center;
    margin: clamp(0.1rem, 1.12vw, 6.4vh);
    width: clamp(1rem, 8.8vw, 8.4vh);
    height: clamp(1rem, 8.8vw, 8.4vh);
    filter: drop-shadow(0 0 0.12vw #AAAAAA);
}

@media screen and (min-width: 768px) {
    .social-media-row-1 {
        width: 50%;
        justify-content: right;
    }
    
    .social-media-row-2 {
        width: 50%;
        justify-content: left;
    }
    
}


@media only screen and (min-aspect-ratio: 1/1) {

    .about-text {
        width: 60vw;
    }

}

@media only screen and (min-aspect-ratio: 14/9) {

    .social-media-icons-body {
        margin: clamp(1rem, 3vw, 6.4vh);
        margin-bottom: 0;
    }

    .social-media-icons {
        margin: clamp(1rem, 3vw, 6.4vh);
        margin-top: 1vh;
    }

    .social-media-icon {
        width: clamp(1rem, 3vw, 6.4vh);
        height: clamp(1rem, 3vw, 6.4vh);
        margin: clamp(0.2rem, 0.6vw, 6.4vh);
    }

    .social-media-icon:hover {
        margin: clamp(0.1rem, 0.445vw, 6.4vh);
        width: clamp(1rem, 3.3vw, 6.4vh);
        height: clamp(1rem, 3.3vw, 6.4vh);
    }

}

